Upgraded to TheseFoolishThings 3.2-ALPHA-23, SteelBlue 1.1-ALPHA-3 and code clean up.